--- a/src/components/Concept/Concept.less
+++ b/src/components/Concept/Concept.less
@@ -212,10 +212,11 @@
         }
 
         &__textarea {
-            width: @concept-textarea-width;
             @line-height: 18px;
-            line-height: @line-height;
+            width: @concept-textarea-width;
             font-size: 14px;
+            color: #333;
+            line-height: @line-height;
             min-height: @line-height;
             border: none;
             padding: 6px;    
