--- a/src/components/Controls/Controls.less
+++ b/src/components/Controls/Controls.less
@@ -42,18 +42,21 @@
             letter-spacing: 0.5px;
             line-height: 20px;
             font-size: 16px;
+            word-break: break-word;
         }
 
         &__relationship-concept-text {
             font-weight: 300;
             font-size: 14px;
             line-height: 18px;
+            word-break: break-word;
         }
 
         &__relationship-influence-text {
             font-weight: 600;
             margin: 6px 0 4px;
-            line-height: 16px;     
+            line-height: 20px;
+            word-break: break-word;
         }
     }
 
