- updated dual line relationship to better match as3 ecomodeler - update to show selected concept/relationship name update when typing - code cleanup - TODO: remove unsafe componentWillReceiveProps

--- a/src/components/RelationshipValueDisplay/RelationshipValueDisplay.css
+++ b/src/components/RelationshipValueDisplay/RelationshipValueDisplay.css
@@ -15,6 +15,9 @@
   display: -webkit-box;
   overflow: hidden;
   word-break: break-word;
+  font-size: 14px;
+  line-height: 20px;
+  min-height: 40px;
 }
 .MentalMapper .relationship-value-display__delete-and-edit {
   position: absolute;
@@ -151,6 +154,7 @@
   overflow: hidden;
   resize: none;
   word-break: break-word;
+  white-space: break-spaces;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 @keyframes MentalMapper-menu-pop-in-expand {
