--- a/src/components/Controls/Controls.css
+++ b/src/components/Controls/Controls.css
@@ -9,10 +9,39 @@
   overflow: auto;
   position: relative;
 }
+.MentalMapper .controls__logo {
+  background-color: #3c3c3c;
+  height: 44px;
+  width: 100%;
+  z-index: 1;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.MentalMapper .controls__logo > span {
+  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+  font-weight: 700;
+  font-size: 26px;
+}
+.MentalMapper .controls__logo > span:first-child {
+  color: #fff;
+}
+.MentalMapper .controls__logo > span:last-child {
+  color: #d44c36;
+}
+.MentalMapper .controls__bg-wrapper {
+  position: absolute;
+  top: 44px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
 .MentalMapper .controls__bg {
   transform: rotateZ(270deg) scale(10);
   position: absolute;
-  bottom: 0;
+  bottom: -22px;
   left: 0;
   transform-origin: top left;
   color: #ececec;
