--- a/src/components/Controls/Controls.less
+++ b/src/components/Controls/Controls.less
@@ -13,10 +13,43 @@
         overflow: auto;
         position: relative;
 
+        &__logo {
+            background-color: #3c3c3c; // @gray;
+            height: 44px;
+            width: 100%;
+            z-index: 1;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+
+            > span {
+                text-shadow: 0 1px 4px rgba(0, 0, 0, .5);
+                font-weight: 700;
+                font-size: 26px;
+                &:first-child {
+                    color: #fff;
+                }
+
+                &:last-child {
+                    color: @main-color;
+                }
+            }
+        }
+
+        &__bg-wrapper {
+            position: absolute;
+            top: 44px;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            overflow: hidden;
+        }
+
         &__bg {
             transform: rotateZ(270deg) scale(10);
             position: absolute;
-            bottom: 0;
+            bottom: -22px;
             left: 0;
             transform-origin: top left;
             color: #ececec;
